Remove regex in favor of simple string split
